# hackathon-mistral

./: .gitignore  CLAUDE.md  README.md  TREE_ANALYZER_README.md  TREE_GENERATION_GUIDE.md  docker-compose.yml  example_tree_output.json  extract_pdf.py  features.md  package.json  pyproject.toml  test_tree_analyzer.py  test_tree_generation.py  visualize_tree.html
.agents/access-multiwoz-data/: SKILL.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: assist.py  calls.py  sessions.py  specs.py  tree_analysis.py  trees.py
backend/app/services/: call_analysis.py  transcription.py  tree_analyzer.py  tree_generator.py
backend/scripts/: analyze_tree.py
db/: schema.sql
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/new/: page.tsx
frontend/app/trees/[treeId]/: page.tsx
frontend/app/trees/[treeId]/audit/: page.tsx
frontend/app/trees/[treeId]/flow/: page.tsx
frontend/app/trees/[treeId]/guide/: page.tsx
frontend/components/: AssistBar.tsx  AudioUploader.tsx  CallReport.tsx  FlowTree.tsx  GuidePanel.tsx  TopBar.tsx  TreeViewer.tsx  UploadCard.tsx
frontend/lib/: api.ts  types.ts
notebooks/scripts/: download_multiwoz.py
presentation/: _quarto.yml  custom.scss  index.qmd
presentation/docs/: index.html  search.json
scripts/: dev.mjs
test-data/: README.md  question_cta-v2 (2).md  sample_dialogues.json  sample_spec.txt  sample_tree_invalid.json  sample_tree_valid.json  tree.txt
(+1 files in other folders)
