[project]
name = "hackathon-mistral"
version = "0.1.0"
description = "create a powerpoint to bridge the gap between tech teams and the executive"
authors = [
    {name = "Aymerrric",email = "aymeric.sabrie@polytechnique.edu"}
]
requires-python = ">=3.12"
dependencies = [
    "mcp (>=1.28.1,<2.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
