[tool.poetry]
name = "calltree-backend"
version = "0.1.0"
description = "FastAPI backend for CallTree — decision-tree call guidance and call auditing"
authors = ["Hackathon Team"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.30" }
sqlalchemy = "^2.0"
psycopg = { extras = ["binary"], version = "^3.1" }
pydantic = "^2.7"
pydantic-settings = "^2.2"
python-multipart = "^0.0.9"     # multipart uploads (spec docs, audio files)
mistralai = "^1.0"              # Mistral API client (chat + Voxtral audio)
pypdf = "^4.2"                  # PDF text extraction for spec documents

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
